[Warwickshire] raise z-index of map, working around chrome bug
works around
https://github.com/mysociety/FixMyStreet-Commercial/issues/614

(This is a chrome bug, but as it doesn't happen with standard
FMS, we investigated further with @stevenday and @zarino.
For reasons I don't understand, the issue is fixed by:
 - removing negative z-index from map
 - this then makes the site-header not display, so we set
 position:relative -- not having done this before might be
 the reason for the previous negative index? )

--- a/web/cobrands/warwickshire/layout.scss
+++ b/web/cobrands/warwickshire/layout.scss
@@ -3,6 +3,7 @@
 
 
 #site-header {
+    position: relative;
     border-top-width: 0;
 
     .navbar {
